--- a/resume.tex
+++ b/resume.tex
@@ -112,10 +112,12 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Jake Ryan} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{jake@su.edu}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \textbf{\Huge \scshape Sourish Mandal} \\ \vspace{1pt}
+    \small (91)747-917-7464 $|$
+    \href{mailto:sourishmandaldgp@gmail.com}{\underline{sourishmandaldgp@gmail.com}} $|$
+    \href{mailto:btech15026.20@bitmesra.ac.in}{\underline{btech15026.20@bitmesra.ac.in}} $|$ 
+    \href{https://linkedin.com/in/sourish-mandal}{\underline{linkedin.com/in/sourish-mandal}} $|$
+    \href{https://github.com/sourish-m}{\underline{github.com/sourish-m}}
 \end{center}
 
 
@@ -123,11 +125,14 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
+      {Birla Institute of Technology Mesra}{Ranchi, Jharkhand}
+      {Bachelor of Technology in Computer Science and Engineering, GPA:9.05}{Aug. 2020 -- May 2024}
     \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
+      {DAV Model School}{Durgapur, West Bengal}
+      {Higher Secondary, 92.6\% in Boards}{2018 -- 2020}
+    \resumeSubheading
+      {St. Peter’s School}{Durgapur, West Bengal}
+      {Secondary, 97.2\% in Boards}{-- 2018}
   \resumeSubHeadingListEnd
 
 
@@ -136,12 +141,13 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {Undergraduate Research Assistant}{June 2023 -- August 2023}
+      {National Institute of Technology Patna}{Patna, Bihar}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+        \resumeItem{Collaborated as part of a 2-member team to conduct a research project on "Zero-day attack detection using FP-Growth algorithm".}
+        \resumeItem{Developed an innovative technique to detect unknown vulnerabilities in network.}
+        \resumeItem{Successfully designed and implemented a functional model using Python, NumPy, Pandas and Bash that achieved an accuracy rate of 91.6\%.}
+        \resumeItem{Key Skills: Machine Learning, Cybersecurity, Data Mining and Analysis}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -153,27 +159,6 @@
 %     \resumeItemListEnd
 %    \resumeSubHeadingListEnd
 %-------------------------------------------
-
-    \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-    \resumeItemListEnd
-
-    \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-      \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
