--- a/resume.tex
+++ b/resume.tex
@@ -167,20 +167,19 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
+          {\textbf{Library Management Website} $|$ \emph{Python, Flask, Javascript, SQLite}}{June 2023 -- Present}
           \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
+            \resumeItem{Developed a robust full stack Library Management system website utilizing Flask and 
+SQLalchemy.}
+            \resumeItem{Used Bulma CSS Framework for the frontend.}
+            \resumeItem{Integrated external book data API.}
+            \resumeItem{Designed efficient CRUD operations across multiple database tables.}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
+          {\textbf{To-Do List App} $|$ \emph{Kotlin, Material-UI}}{May 2022 -- May 2022}
           \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
+            \resumeItem{Developed a simple To-do List App for Android.}
+            \resumeItem{Used Material UI design and latest Android coding guidelines.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -191,9 +190,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
+     \textbf{Languages}{: Java, Python, C/C++, SQL (MySQL), JavaScript, HTML/CSS, Kotlin} \\
+     \textbf{Frameworks}{: Node.js, Flask, Bulma} \\
+     \textbf{Developer Tools}{: Git, Docker, Github Actions, Linux, Bash Scripting} \\
      \textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
  \end{itemize}
