--- a/resume.tex
+++ b/resume.tex
@@ -167,7 +167,7 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Library Management Website} $|$ \emph{Python, Flask, Javascript, SQLite}}{June 2023 -- Present}
+          {\textbf{Library Management System} $|$ \emph{Python, Flask, Javascript, SQLite}}
           \resumeItemListStart
             \resumeItem{Developed a robust full stack Library Management system website utilizing Flask and 
 SQLalchemy.}
@@ -175,8 +175,14 @@ SQLalchemy.}
             \resumeItem{Integrated external book data API.}
             \resumeItem{Designed efficient CRUD operations across multiple database tables.}
           \resumeItemListEnd
+          \resumeProjectHeading
+          {\textbf{Customer Analysis Simulation (Forage)} $|$ \emph{Python}}
+          \resumeItemListStart
+            \resumeItem{Completed a customer churn analysis simulation, demonstrating advanced data analytics skills, identifying essential client data and outlining a strategic investigation approach.}
+            \resumeItem{Completed the engineering and optimization of a random forest model with 85\% accuracy. Created a concise executive presentation, delivering insights for informed decision-making.}
+          \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{To-Do List App} $|$ \emph{Kotlin, Material-UI}}{May 2022 -- May 2022}
+          {\textbf{To-Do List App} $|$ \emph{Kotlin, Material-UI}}
           \resumeItemListStart
             \resumeItem{Developed a simple To-do List App for Android.}
             \resumeItem{Used Material UI design and latest Android coding guidelines.}
@@ -191,10 +197,16 @@ SQLalchemy.}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Java, Python, C/C++, SQL (MySQL), JavaScript, HTML/CSS, Kotlin} \\
-     \textbf{Frameworks}{: Node.js, Flask, Bulma} \\
-     \textbf{Developer Tools}{: Git, Docker, Github Actions, Linux, Bash Scripting} \\
+     \textbf{Frameworks}{: Flask, Bulma} \\
+     \textbf{Developer Tools}{: Git, Github Actions, Linux, Bash Scripting} \\
      \textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
+ \end{itemize}
+
+ \section{Extra-Curricular Activities}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Student Board Member}{: Served as the liaison between students and teacher body. Forwarded problems faced by students to the school board. Worked on the student committee elections, leading junior volunteers in conducting a proper voting process. Participated in regular board meetings and committees to discuss and vote on school policies, budget, curriculum, and other matters} \\
  \end{itemize}
 
 
