--- a/resume.tex
+++ b/resume.tex
@@ -144,7 +144,7 @@
       {Undergraduate Research Assistant}{June 2023 -- August 2023}
       {National Institute of Technology Patna}{Patna, Bihar}
       \resumeItemListStart
-        \resumeItem{Collaborated as part of a 2-member team to conduct a research project on "Zero-day attack detection using FP-Growth algorithm".}
+        \resumeItem{Collaborated as part of a 2-member team to conduct a research project on \"Zero-day attack detection using FP-Growth algorithm\".}
         \resumeItem{Developed an innovative technique to detect unknown vulnerabilities in network.}
         \resumeItem{Successfully designed and implemented a functional model using Python, NumPy, Pandas and Bash that achieved an accuracy rate of 91.6\%.}
         \resumeItem{Key Skills: Machine Learning, Cybersecurity, Data Mining and Analysis}
